# Algorytmy

./: .gitignore  10_iloczyn.cpp  11_gwozdzie.cpp  12_tory_kolejowe.cpp  13_nawiasy.cpp  14_rybki.cpp  15_cukiernia.cpp  16_dwieCzesci.cpp  17_bajtockaFlaga.cpp  17_bajtockaFlaga.py  18_liderPrefiksowy.cpp  19_odchudzanie.cpp  1_zabka.cpp  20_bilet.cpp  2_chodnik.cpp  3_tasma.cpp  4_permutacja.cpp  5_ropucha.cpp  6_przyciski.cpp  7_dluga_tasma.cpp  8_samochody.cpp  9_chomiki.cpp  CMakeLists.txt  bb.cpp  cw_zliczanie.cpp  dijkstry.cpp  go_to.c  grafy_1_kmi.cpp  graph.cpp  ksiazkiHalinki.cpp  leader_search.cpp  pary.cpp  podzielniki.cpp  pointers.cpp  preczA.cpp  reszta.cpp  rozkład_fib.cpp  sen.cpp  siudemki.cpp  tricks.cpp
Kurs_algorytmy/: Cunification.cpp  DsumDEference.cpp  MWP8_1A-Macierz NWD.cpp  MieszanieKorówB.cpp  WyszukiwanieBIN_01.cpp  fib.cpp  lekcja1  lekcja10_dynamiczne_cd4  lekcja2  lekcja3  lekcja3.txt  lekcja4  lekcja5.txt  lekcja6_dynamiczne.txt  lekcja7_dynamiczne_cd.txt  lekcja8_dynamiczne_cd2.txt  lekcja9_cynamiczne_cd3.txt  mandarynki.cpp  nwd.cpp  nww.cpp  nww2_spoj.cpp  wesola_malpka.cpp  zabawki.cpp  zbiorPierwszych.cpp
Kurs_algorytmy/Grafy/: dfs.cpp  drzewo_glebokosc_drzewa.cpp  drzewo_ile_mozna_w_dol.cpp  drzewo_rozmiary_poddrzew.cpp  lekcja1  lekcja2  listaKontaktow.cpp
Kurs_algorytmy/zadania/: AAAA_NajdluuzszyWspólnyPodcig_dynamicznie2.cpp  AAAA_NajdłuższyWspólnyPodciągu_dynamiczne.cpp  NajdluzszyPodciagPalindromem.cpp  bracia.cpp  deski.cpp  drabina.cpp  ladnyCiag.cpp  najdluzszyPodciagFragmentuPalindromem.cpp  najwiekszaSumaNieBioracDwuchKolejnych.cpp  pionek.cpp  potega.cpp  spotkanie.cpp  (+7 more)
PI/: 02_2_narc.c  cw1_a_UJ.c
UJ_jezykC/: test.c  uj_1.c  uj_2.c  uj_3.c  uj_4.c  uj_5_FactorialTgamma.c  uj_6_lgamma.c
diamentAGH/: dio.cpp  mat.cpp  min.cpp  pair.cpp  pri.cpp
tutorials/: ImplicitConversion_ExplicitKeyword.cpp  arrowOperator.cpp  copyConstructor.cpp  functionPointers.cpp  iterator.cpp  lambda.cpp  macros.cpp  memset_example.cpp  operatorOverload.cpp  smartPointers.cpp  templates.cpp  unions.cpp
wdi/: ListaOdsylaczowa.py  ListaOdsylaczowa_prime.py  ListaOdsylaczowa_zad10.py  ListaOdsylaczowa_zad11.py  ListaZakonczonaCyklem_zad23.py
(+4 files in other folders)
