cmake_minimum_required(VERSION 3.15)
project(algorithms)

set(CMAKE_CXX_STANDARD 14)

#add_executable(algorithms diamentAGH/pri.cpp)
#add_executable(algorithms diamentAGH/mat.cpp)
#add_executable(algorithms diamentAGH/dio.cpp)
#add_executable(algorithms diamentAGH/pri.cpp)
add_executable(algorithms UJ_jezykC/uj_5_FactorialTgamma.c)