cmake_minimum_required(VERSION 3.15)
project(algorithms)

set(CMAKE_CXX_STANDARD 14)

#add_executable(algorithms diamentAGH/pri.cpp)
#add_executable(algorithms diamentAGH/mat.cpp)
#add_executable(algorithms diamentAGH/dio.cpp)
#add_executable(algorithms diamentAGH/pri.cpp)
#add_executable(algorithms UJ_jezykC/kalkulator_onp/stack.h UJ_jezykC/kalkulator_onp/stack.c UJ_jezykC/kalkulator_onp/main.c)
#add_executable(algorithms UJ_jezykC/test.c)
#add_executable(algorithms  tutorials/iterator.cpp)
add_executable(algorithms  Kurs_algorytmy/WyszukiwanieBIN_01.cpp Kurs_algorytmy/zadania/promienParasola.cpp Kurs_algorytmy/zadania/deski.cpp Kurs_algorytmy/zadania/wesola_malpka.cpp Kurs_algorytmy/zadania/sznurki.cpp Kurs_algorytmy/zadania/pionek.cpp Kurs_algorytmy/zadania/najwiekszaSumaNieBioracDwuchKolejnych.cpp Kurs_algorytmy/zadania/znajdzNajdluzszyWpolnyPodciag.cpp Kurs_algorytmy/zadania/szklanki.cpp Kurs_algorytmy/zadania/NajdluzszyPodciagPalindromem.cpp Kurs_algorytmy/zadania/AAAA_NajdłuższyWspólnyPodciągu_dynamiczne.cpp)
#add_executable(algorithms Kurs_algorytmy/Cunification.cpp)